deps/v8/test/message/fail/modules-import-assertions-fail-3.out
*modules-skip-3-import-assertions-fail.json:1: SyntaxError: Unexpected token ':'
{ "life": 42 }
        ^
SyntaxError: Unexpected token ':'